content: 블로그 전면 개편 (84편 정리, 68편 재작성 및 신규 8편)
기준
- 걸작 3편(Elasticsearch x2, KafkaAssignor)의 구조를 표준으로 삼음
  배경(직접 품은 질문) -> 용어를 하나씩 쌓기 -> 1차 출처로 답 -> 정리하며(질문별 답)
- 공식문서 영문 원문 인용 제거. 직접 읽고 한국어로 다시 정리, 출처는 링크로만
- avoid-ai-writing / fluent-korean 적용 (em-dash, bold-콜론 라벨, 가운뎃점, 이모지 0)

삭제 (84편)
- AI로 양산된 쿠버네티스 연재물 60여편, CKA 모의고사, 강의/도서 필사본(저작권)
- 중복 주제 병합: ClassLoader+JVM-Memory+JITCompiler -> JVM-Internals
- 통합: mitm-http-tls-ssh -> devops-devsecops-security-fundamentals

신규 (8편)
- 보안: 키/인증서/SSH/TLS 통합 정리 + 가로채기 시나리오 (RSA, AES 포함)
- K8s: 오브젝트/컴포넌트/애드온, 보안 계층화(PSA, Kyverno, kube-bench, Falco, Trivy)
- Helm 템플릿 문법과 차트 설계, ArgoCD GitOps 패턴
- 관측성: OpenTelemetry + LGTM + 알림 설계
- AI Agent: 인프라 운영 적용
- AWS: 온프렘 K8s를 EKS로 옮길 때의 차이

기존 글 보강
- 기술 오류 수정: EXPLAIN ANALYZE 단위 오독, JWT 페이로드 해싱 오해,
  method.invoke 무한재귀, HikariCP 기본 풀 크기, @Async 반환 규칙,
  Persistable.getId 시그니처, ShallowEtagHeaderFilter 등록 누락,
  TransactionSynchronizationManager의 스레드 간 공유 오해 등
- 깨진 이미지 63건 및 외부 블로그 핫링크 전량을 Mermaid/표로 대체
- 존댓말 혼용 제거, front matter 정규화, 인용 링크 604건 전수 검증

날짜 재배치
- 인프라 계열 15편을 2026-01 ~ 2026-08로 주제 흐름에 맞춰 재배치

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015QRKDfb2NB6yNWrVT8Fmxk