@@ -1,53 +1,102 @@
 ---
 
-title: 공식문서(JEP)로 톺아보는 Java LTS 버전별 주요 기능 (8, 11, 17, 21)
+title: "JEP로 따라가는 Java LTS 버전별 변경점 (8, 11, 17, 21)"
 date: 2024-03-16
 categories: [Java]
-tags: [Java]
+tags: [Java8, Java11, Java17, Java21, JEP, LTS]
 layout: post
 toc: true
 math: true
 mermaid: true
-published: false
 
 ---
 
-# JRE? JDK?
+## 참고자료
 
-![JDK](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FMk8as%2FbtqKsoI4jA3%2F5VnitlEi9njb43qk9kHuik%2Fimg.webp)
-
-JRE (Java Runtime Environment) 의 약자로 JVM, Java Class Library, Java Command, JDBC 등, Java 프로그램을 실행할 수 있는 기본 패키징을 가리킨다.
-
-JDK (Java Development Kit) 의 약자로, JRE 를 포함하여, 컴파일러인 javac, javadoc, jar 등 실제 개발환경에 필요한 요소들을 패키징 한 것이다.
-
-- JRE
-  - 빌드가 완료된 Java 기반의 프로그램을 실행 할 수 있는 환경
-- JDK
-  - Java 기반의 프로그램을 작성부터 빌드 후 실행까지 할 수 있는 환경
-
-JDK 를 다운 받다 보면 `Java SE` 8 ... 9, `Java EE` 8 ... 9 뭐 이런 용어가 있다 이것들도 알아봐보자.
+- [OpenJDK JEP 색인](https://openjdk.org/jeps/0)
+- [JDK 8 릴리스 노트](https://www.oracle.com/java/technologies/javase/8-whats-new.html)
+- [JDK 11 기능 목록](https://openjdk.org/projects/jdk/11/)
+- [JDK 17 기능 목록](https://openjdk.org/projects/jdk/17/)
+- [JDK 21 기능 목록](https://openjdk.org/projects/jdk/21/)
+- [Oracle Java SE 지원 로드맵](https://www.oracle.com/java/technologies/java-se-support-roadmap.html)
 
 ---
 
-## Java SE (Java Standard Edition)
+## 배경
 
-말 그대로, 가장 보편적으로 쓰이는 Java 버전을 뜻한다.
+자바 8만 쓰다가 11로 올리게 됐는데, 무엇이 달라지는지 몰라서 불안했다. "람다가 들어왔다", "모듈이 생겼다" 정도만 알고 있었다.
 
-JDK 8, 11 등 보편적으로 `JDK(Java)` 버전을 가리킬 때 이 `SE 버전`을 뜻하는 것이다.
+블로그 요약글을 여럿 봤는데 서로 내용이 달랐다. 그래서 **JEP를 직접 읽어가면서 정리하기로 했다.**
+
+JEP는 JDK Enhancement Proposal의 약자로, 자바에 무언가를 넣거나 뺄 때 그 근거와 설계를 적어두는 문서다. **"무엇이 바뀌었는지"가 아니라 "왜 바꿨는지"가 적혀 있어서** 이쪽을 읽는 편이 이해가 빨랐다.
+
+정리하면서 확인하고 싶었던 것들이다.
+
+- LTS라는 것이 정확히 무엇을 보장하는가?
+- 버전을 올릴 때 실제로 깨질 수 있는 것은 무엇인가?
+- 각 버전에서 실무에 바로 영향을 주는 변경은 어느 것인가?
 
 ---
 
-## Java EE (Java Enterprise Edition)
+## 1. 용어 정리
 
-서버측 개발을 위한 플랫폼으로 이 역시 `SE`를 기반으로 하되, 부가적인 기능이 추가된 것이다.
+### 1.1 JRE와 JDK
+
+```mermaid
+flowchart TB
+    subgraph JDK["JDK (Java Development Kit)"]
+        subgraph JRE["JRE (Java Runtime Environment)"]
+            JVM["JVM<br/>바이트코드 실행"]
+            LIB["표준 클래스 라이브러리<br/>java.lang, java.util, ..."]
+            JAVA["java 명령"]
+        end
+        JAVAC["javac<br/>컴파일러"]
+        JAVADOC["javadoc"]
+        JAR["jar"]
+        JDB["jdb, jcmd, jfr 등 도구"]
+    end
+```
+
+**JRE는 실행에 필요한 것들의 묶음**이다. JVM, 표준 라이브러리, `java` 명령이 들어 있다.
+
+**JDK는 JRE에 개발 도구를 더한 것**이다. 컴파일러인 `javac`, 문서 생성기 `javadoc`, 패키징 도구 `jar` 등이 함께 들어 있다.
+
+**자바 11부터 JRE를 따로 배포하지 않는다.** 대신 `jlink`로 필요한 모듈만 골라 작은 런타임을 직접 만든다. 컨테이너 이미지를 줄이려고 이걸 쓰는 경우가 많다.
+
+### 1.2 SE와 EE
+
+**Java SE(Standard Edition)** 가 표준 자바다. 흔히 "자바 8", "자바 17"이라고 할 때 이걸 가리킨다.
+
+**Java EE(Enterprise Edition)** 는 서버 개발용 명세를 SE 위에 얹은 것이다. 서블릿, JPA, JMS 같은 것들이 여기 들어 있다.
+
+**지금은 Jakarta EE라는 이름으로 바뀌었다.** 오라클이 이클립스 재단에 넘기면서 상표 문제로 이름이 바뀌었고, 그 과정에서 **패키지 이름도 `javax.*`에서 `jakarta.*`로 바뀌었다.**
+
+스프링 부트 3으로 올릴 때 임포트를 전부 고쳐야 했던 것이 이 때문이다. `javax.servlet.http.HttpServletRequest`가 `jakarta.servlet.http.HttpServletRequest`가 됐다.
+
+### 1.3 LTS
+
+첫 질문이다. LTS는 Long Term Support의 약자다.
+
+자바는 **6개월마다 새 버전을 내고, 몇 년에 한 번씩 그중 하나를 LTS로 지정한다.**
+
+| 구분 | 지원 기간 |
+|---|---|
+| 일반 버전 | 다음 버전이 나올 때까지 6개월 |
+| LTS 버전 | 수년간 보안 패치 제공 |
+
+LTS는 8, 11, 17, 21이다. 그다음이 25다.
+
+**LTS가 보장하는 것은 보안 패치이지 기능 추가가 아니다.** 새 기능은 최신 버전에만 들어간다. 그래서 LTS를 쓴다는 것은 "안정성을 얻고 새 기능을 포기한다"는 선택이다.
+
+**운영 환경에서 비LTS를 쓰기 어려운 이유가 여기 있다.** 6개월마다 올려야 하고, 안 올리면 보안 취약점이 나와도 패치를 못 받는다.
 
 ---
 
-# JDK 8
+## 2. JDK 8
 
-## [1. JEP 126 - 람다식/인터페이스 기본, 정적 메서드 추가](https://openjdk.org/jeps/126)
+### [1. JEP 126 - 람다식/인터페이스 기본, 정적 메서드 추가](https://openjdk.org/jeps/126)
 
-### 명세 측
+#### 명세 측
 
 ```java
 public interface Vehicles {
@@ -63,7 +112,7 @@ public interface Vehicles {
 }
 ```
 
-### 사용 측
+#### 사용 측
 
 ```java
 public class Client {
@@ -74,7 +123,7 @@ public class Client {
 
 ---
 
-## 2. Static Method, Method 참조 방식 개선
+### 2. Static Method, Method 참조 방식 개선
 
 ```java
 public class StaticMethodReference {
@@ -112,7 +161,7 @@ public class StaticMethodReference {
 
 ---
 
-## 3. Optional<T>
+### 3. Optional<T>
 
 Null을 다룰 수 있는 래퍼 객체인 Optional이 추가되었다.
 
@@ -126,7 +175,7 @@ static void main(String[] args) {
     Optional<String> optional = Optional.ofNullable(getStrin
 ```
 
-### Java 8 이전 Optional 기능을 대체할 구문
+#### Java 8 이전 Optional 기능을 대체할 구문
 
 ```java
 static void main(String[] args) {
@@ -183,9 +232,9 @@ static void main(String[] args) {
 
 ---
 
-## 4. Stream
+### 4. Stream
 
-### 기본 사용법
+#### 기본 사용법
 
 ```java
 static void main(String[] args) {
@@ -194,7 +243,7 @@ static void main(String[] args) {
     stream = Stream.of("a", "b", 
 ```
 
-### 멀티 쓰레드 환경에서의 스트림 사용법
+#### 멀티 쓰레드 환경에서의 스트림 사용법
 
 일반적인 `stream()`구문이 아닌 `parallelStream()`구문으로 멀티 쓰레드 환경에서 안전하게 스트림을 사용할 수 있다.
 
@@ -203,13 +252,13 @@ static void main(String[] args) {
     list.parallelStream().forEach(element -> doWork(eleme
 ```
 
-### 스트림 주요 연산
+#### 스트림 주요 연산
 
 스트림은 기본적으로 `선언`, `중간 연산`, `종단 연산` 이 세 가지로 나뉜다.
 
 스트림이 제공하는 `중간 연산`을 잘 활용하면 반복문을 생성하지 않고도 컬렉션을 순회하는 등 코드의 가독성을 확보할 수 있다.
 
-#### 스트림 중간 연산 - Iterating
+##### 스트림 중간 연산 - Iterating
 
 ```java
 static void main(String[] args) {
@@ -224,7 +273,7 @@ static void main(String[] args) {
     boolean isExist = list.stream().anyMatch(element -> element.contains("
 ```
 
-#### 스트림 중간 연산 - Filtering
+##### 스트림 중간 연산 - Filtering
 
 ```java
 static void main(String[] args) {
@@ -246,7 +295,7 @@ static void main(String[] args) {
 
 위와 같은 `filter`연산으로 조건절에 부합하는 내용만 뽑아오는 기능을 적용할 수 있다.
 
-#### 스트림 종단 연산 - Mapping
+##### 스트림 종단 연산 - Mapping
 
 ```java
 static void main(String[] args) {
@@ -291,7 +340,7 @@ static void main(String[] args) {
 
 `flatMap 내부의 Arrays::stream`은 **배열을 스트림으로 변환해주는 메서드 참조 표현**이다. `flatMap`을 사용하면 각각의 String 리스트를 스트림으로 만드는 것이 아니라, 한 단계 더 깊은 깊이의 모든 요소를 하나의 스트림으로 합친다.
 
-#### 스트림 종단 연산 - Matching
+##### 스트림 종단 연산 - Matching
 
 ```java
 static void main(String[] args) {
@@ -305,15 +354,13 @@ static void main(String[] args) {
 
 ---
 
-# JDK 11
+## 3. JDK 11
 
 [참고 자료 - OpenJDK 11 Official](https://openjdk.org/projects/jdk/11/)
 
-## [🌟1. JEP 181 - Inner Class에서 Outer Class에 접근 가능](https://openjdk.org/jeps/181)
+### [1. JEP 181 - Nest 기반 접근 제어](https://openjdk.org/jeps/181)
 
-이전 버전에서는 아래와 같이 `Inner클래스에서` `Outer클래스의 private멤버`에 접근하는 것이 불가능했다.
-
-그래서 내부 클래스가 같은 코드 엔티티의 다른 클래스들의 private 멤버에 직접 접근할 수 있도록 한다.
+내부 클래스가 바깥 클래스의 private 멤버에 접근하는 코드다.
 
 ```java
 public class OuterClass {
@@ -324,21 +371,56 @@ public class OuterClass {
 
     public class InnerClass {
         public void show() {
-            privateMethod(); // Java 11이전 버전에서는 컴파일 에러가 발생한다.
+            privateMethod();
         }
     }
 }
 ```
 
-JDK 11 부터는 별다른 코드의 변경 없이 위와 같은 코드가 컴파일 에러가 발생하지 않도록 조치되었다.
+**이 코드는 자바 11 이전에도 컴파일된다.** 여기서 자주 오해하는 부분이다.
 
-여기서 알고가면 좋을 점은 `Inner Class` vs `Nested Class`인데, `Inner Class`는 위와 같은 형태이고,
+문제는 **JVM 수준에서는 이 접근이 원래 허용되지 않는다**는 것이었다. 소스에서는 하나의 클래스처럼 보이지만, 컴파일하면 `OuterClass.class`와 `OuterClass$InnerClass.class`라는 **별개의 클래스 파일 두 개**가 나온다. 서로 다른 클래스니까 private 멤버에 접근할 수 없다.
 
-`Nested Class`는 `Outer Class 내에 Static으로 Class`가 선언된 경우를 말한다.
+컴파일러가 이걸 우회하고 있었다. **눈에 안 보이는 다리 메서드를 자동으로 만들어 넣는 방식**이다.
+
+```java
+// 컴파일러가 몰래 추가하던 것
+static void access$000() {
+    privateMethod();
+}
+```
+
+`InnerClass`는 private 메서드가 아니라 이 다리 메서드를 부른다. 다리 메서드는 package-private이라 접근이 된다.
+
+**이 방식에 문제가 있었다.**
+
+원래 없던 메서드가 클래스 파일에 생기니 **리플렉션으로 보면 정체불명의 메서드가 보인다.** 그리고 이 메서드는 private이 아니므로, **같은 패키지의 다른 코드가 이걸 불러서 private 멤버에 우회 접근할 수 있다.**
+
+JEP 181은 **클래스 파일에 nest라는 개념을 추가해서 이 우회를 없앴다.**
+
+바깥 클래스에는 자기 nest에 누가 속하는지를 적은 `NestMembers` 속성이 붙고, 내부 클래스에는 자기 nest의 주인이 누구인지 적은 `NestHost` 속성이 붙는다. **JVM이 이 정보를 보고 같은 nest 안이면 private 접근을 허용한다.**
+
+```mermaid
+flowchart TB
+    subgraph BEFORE["자바 11 이전"]
+        I1["InnerClass"] -->|"access$000() 호출"| B["컴파일러가 만든 다리 메서드"]
+        B --> P1["privateMethod()"]
+    end
+    subgraph AFTER["자바 11 이후"]
+        I2["InnerClass<br/>NestHost: OuterClass"] -->|"직접 호출"| P2["privateMethod()"]
+        O["OuterClass<br/>NestMembers: InnerClass"] -.같은 nest.-> I2
+    end
+```
+
+**소스 코드는 안 바뀌고 클래스 파일과 JVM 동작이 바뀐 것**이다. 그래서 "코드 변경 없이 적용된다"는 말이 맞다.
+
+리플렉션에도 영향이 있다. **`setAccessible(true)` 없이도 같은 nest 안의 private 멤버에 접근할 수 있게 됐다.** `Class.getNestHost()`, `Class.getNestMembers()`로 확인할 수 있다.
+
+여기서 함께 짚어둘 것이 있다. **`Inner Class`와 `Nested Class`는 다르다.** `static`이 없으면 내부(inner) 클래스이고 바깥 인스턴스 참조를 갖는다. `static`을 붙이면 중첩(nested) 클래스이고 그 참조가 없다. [코틀린 글](/posts/Kotlin-class-object/)에 이 차이를 정리해뒀다.
 
 ---
 
-## [2. JEP 309 - Dynamic Class-File Constants](https://openjdk.org/jeps/309)
+### [2. JEP 309 - Dynamic Class-File Constants](https://openjdk.org/jeps/309)
 
 새로운 상수 풀 형식 `CONSTANT_Dynamic`을 지원한다.
 
@@ -356,7 +438,7 @@ dynamicConstant = bootstrapMethod();
 
 ---
 
-## [3. JEP 315 - Improve Aarch64 Intrinsics](https://openjdk.org/jeps/315)
+### [3. JEP 315 - Improve Aarch64 Intrinsics](https://openjdk.org/jeps/315)
 
 - sin (sine trigonometric function)
 - cos (cosine trigonometric function)
@@ -366,7 +448,7 @@ dynamicConstant = bootstrapMethod();
 
 ---
 
-## [🌟4. JEP 318 - Epsilon: A No-Op Garbage Collector (Experimental)](https://openjdk.org/jeps/318)
+### [4. JEP 318 - Epsilon: A No-Op Garbage Collector (Experimental)](https://openjdk.org/jeps/318)
 
 Epsilon이라는 새로운 가비지 수집기가 Java 11에서 실험판으로 열렸다. 메모리 할당은 처리하지만 실제 메모리 회수 메커니즘을 구현하지 않는 GC이다. 사용 가능한 Java 힙이 소진되면 JVM은 종료된다.
 
@@ -388,7 +470,7 @@ Epsilon이라는 새로운 가비지 수집기가 Java 11에서 실험판으로 
 
 ---
 
-## [5. JEP 320 - Java EE, CORBA Modules 제거](https://openjdk.org/jeps/320)
+### [5. JEP 320 - Java EE, CORBA Modules 제거](https://openjdk.org/jeps/320)
 
 `Java SE 6`에 `Java EE` 플랫폼을 위해 개발된 네 가지 기술 `JAX-WS`, `JAXB`, `JAF`, `Common Annotations`로 구성됐다.
 
@@ -396,7 +478,7 @@ Epsilon이라는 새로운 가비지 수집기가 Java 11에서 실험판으로 
 
 JAF, JAXB, JAX-WS와 같은 기술들은 더 이상 Java SE에 제공되지 않고 이를 필요로 하면 `Java EE` 버전을 사용해야 한다.
 
-### 제거 된 모듈
+#### 제거 된 모듈
 
 - java.se.ee
 - java.activation (JAF)
@@ -408,7 +490,7 @@ JAF, JAXB, JAX-WS와 같은 기술들은 더 이상 Java SE에 제공되지 않�
 
 ---
 
-## [🌟6. JEP 321 - HTTP Client 표준화](https://openjdk.org/jeps/321)
+### [6. JEP 321 - HTTP Client 표준화](https://openjdk.org/jeps/321)
 
 JEP 321은 JDK 9에서 인큐베이팅(innovating) API로 도입됐고 JDK 10에서 업데이트된 HTTP Client API를 표준화한다.
 
@@ -418,7 +500,7 @@ JEP 321은 JDK 9에서 인큐베이팅(innovating) API로 도입됐고 JDK 10에
 
 사용 코드는 아래와 같다.
 
-### 동기 방식
+#### 동기 방식
 
 ```java
 static void main(String[] args) {
@@ -437,7 +519,7 @@ static void main(String[] args) {
     assertThat(httpResponse.body()).isEqualTo("Hello from the serve
 ```
 
-### 비동기 방식
+#### 비동기 방식
 
 ```java
 static void main(String[] args) {
@@ -459,18 +541,18 @@ static void main(String[] args) {
 
 ---
 
-## 🌟7. JEP 323 - Lambda 매개변수 지역 변수 문법 개선
+### 7. JEP 323 - Lambda 매개변수 지역 변수 문법 개선
 
 람다 표현식의 형식 매개변수(formal parameters)를 선언할 때 var를 사용할 수 있게 하는 기능을 추가한다.
 
-### 기존 코드
+#### 기존 코드
 
 ```java
 static void main(String[] args) {
     (BinaryOperator<Integer> bo) = (Integer x, Integer y) -> x
 ```
 
-### 적용 후 코드
+#### 적용 후 코드
 
 ```java
 static void main(String[] args) {
@@ -479,13 +561,13 @@ static void main(String[] args) {
 
 ---
 
-## [8. JEP 324 - Key Agreement with Curve25519 and Curve448](https://openjdk.org/jeps/324)
+### [8. JEP 324 - Key Agreement with Curve25519 and Curve448](https://openjdk.org/jeps/324)
 
 `RFC 7748`에 따라 `Curve25519`와 `Curve448`을 사용하여 `Key Agreement`를 구현한다. 기존 Diffie-Hellman (ECDH) 방식보다 효율적이고 안전한 키 합의 스킴을 제공한다.
 
 ---
 
-## [🌟9. JEP 327 - Unicode 10](https://openjdk.org/jeps/327)
+### [9. JEP 327 - Unicode 10](https://openjdk.org/jeps/327)
 
 유니코드 표준 버전 10.0을 지원한다.
 
@@ -508,7 +590,7 @@ public class UnicodeExample {
 
 ---
 
-## [🌟10. JEP 328 - Flight Recorder (JFR) 추가](https://openjdk.org/jeps/328)
+### [10. JEP 328 - Flight Recorder (JFR) 추가](https://openjdk.org/jeps/328)
 
 HotSpot JVM 및 자바 애플리케이션의 낮은 오버헤드를 가진 데이터 수집 프레임워크가 추가됐다. 애플리케이션 및 JVM의 상세한 실행 정보를 실시간으로 수집하고 분석할 수 있는 도구이다.
 
@@ -562,11 +644,29 @@ public class Main {
 
 ```
 
-![](https://github.com/K-Diger/K-Diger.github.io/blob/main/images/jfr/jfr.png?raw=true)
+실행하면 `.jfr` 파일이 만들어지고, 이 파일을 JDK Mission Control로 열면 기록된 이벤트를 볼 수 있다.
+
+```bash
+# 실행하면서 기록 시작
+java -XX:StartFlightRecording=duration=60s,filename=recording.jfr -jar app.jar
+
+# 이미 도는 프로세스에 붙여서 기록
+jcmd <pid> JFR.start duration=60s filename=recording.jfr
+jcmd <pid> JFR.dump filename=snapshot.jfr
+jcmd <pid> JFR.stop
+
+# 파일 내용을 텍스트로 확인
+jfr summary recording.jfr
+jfr print --events GarbageCollection recording.jfr
+```
+
+`jfr summary`를 돌리면 어떤 종류의 이벤트가 몇 건 기록됐는지가 나온다. GC, 스레드 상태, 객체 할당, 예외 발생, JIT 컴파일 같은 것들이 이벤트 단위로 남는다.
+
+**운영 환경에서 켜둘 수 있다는 점이 요점이다.** 기본 설정의 오버헤드가 1퍼센트 남짓이라, 문제가 났을 때 기록을 시작하는 것이 아니라 항상 켜두고 필요할 때 덤프를 뜨는 방식으로 쓴다.
 
 ---
 
-## [11. JEP 329 - ChaCha20, Poly1305 암호화 알고리즘 추가](https://openjdk.org/jeps/329)
+### [11. JEP 329 - ChaCha20, Poly1305 암호화 알고리즘 추가](https://openjdk.org/jeps/329)
 
 ```java
 import java.security.InvalidAlgorithmParameterException;
@@ -626,7 +726,7 @@ public class Main {
 
 ---
 
-## [🌟12. JEP 330 - Launch Single-File Source-Code Programs (Java 파일 실행의 간소화)](https://openjdk.org/jeps/330)
+### [12. JEP 330 - Launch Single-File Source-Code Programs (Java 파일 실행의 간소화)](https://openjdk.org/jeps/330)
 
 javac를 사용하여 Java 소스 파일을 컴파일할 필요없이 실행 가능해졌다.
 
@@ -647,7 +747,7 @@ Hello Java 11!
 
 ---
 
-## [🌟13. JEP 331 - Low-Overhead Heap Profiling](https://openjdk.org/jeps/331)
+### [13. JEP 331 - Low-Overhead Heap Profiling](https://openjdk.org/jeps/331)
 
 낮은 오버헤드로 Heap영역을 프로파일링 할 수 있는 도구가 추가됐다.
 
@@ -662,7 +762,7 @@ java -XX:+HeapDumpOnOutOfMemoryError -XX:StartFlightRecording=dumponexit=true,fi
 
 ---
 
-## [🌟14. JEP 332 - Transport Layer Security (TLS) 1.3](https://openjdk.org/jeps/332)
+### [14. JEP 332 - Transport Layer Security (TLS) 1.3](https://openjdk.org/jeps/332)
 
 TLS에 대한 개선이 이루어졌다.
 
@@ -671,7 +771,7 @@ TLS에 대한 개선이 이루어졌다.
 
 ---
 
-## [🌟15. JEP 333 - ZGC 실험판 추가](https://openjdk.org/jeps/333)
+### [15. JEP 333 - ZGC 실험판 추가](https://openjdk.org/jeps/333)
 
 ZGC가 실험버전으로 추가되었다. ZGC가 개선하고자 하는 목표는 아래와 같다.
 
@@ -708,7 +808,7 @@ SPECjbb® 2015를 사용한 성능 측정 결과는 아래와 같다. 128G 힙�
 
 ---
 
-## [16. JEP 335 - Deprecate the Nashorn JavaScript Engine](https://openjdk.org/jeps/335)
+### [16. JEP 335 - Deprecate the Nashorn JavaScript Engine](https://openjdk.org/jeps/335)
 
 Nashorn은 JDK 8에서 Rhino의 후속으로 도입되어 Java 애플리케이션에서 JavaScript를 실행할 수 있는 방법을 제공했다.
 
@@ -718,7 +818,7 @@ Nashorn은 JDK 8에서 Rhino의 후속으로 도입되어 Java 애플리케이�
 
 ---
 
-## [17. JEP 336 - Deprecate the Pack200 Tools and API](https://openjdk.org/jeps/336)
+### [17. JEP 336 - Deprecate the Pack200 Tools and API](https://openjdk.org/jeps/336)
 
 Pack200 Tools와 API는 자바 애플리케이션의 패키징, 전송, 그리고 배포를 위한 디스크와 대역폭 요구사항을 줄이는 목적으로 Java SE 5.0에서 등장했다.
 
@@ -743,9 +843,9 @@ java.util.jar.Pack200.Unpacker
 
 ---
 
-## 18. 공식문서 외의 추가된 내용 (Default Gc == G1, String Method, Collection.toArray())
+### 18. 공식문서 외의 추가된 내용 (Default Gc == G1, String Method, Collection.toArray())
 
-### 🌟1. G1 GC가 기본 값으로 등록됨
+#### 1. G1 GC가 기본 값으로 등록됨
 
 LTS 기준 **JDK 8**까지는 **Parallel GC**가 **기본값**이었다.
 
@@ -755,13 +855,13 @@ JDK7에 첫 등장한 **G1 GC**가 **기본값**으로 등록된 버전이다.
 
 ---
 
-### 🌟2. 문자열 메서드 추가
+#### 2. 문자열 메서드 추가
 
 `isBlank`, `lines`, `strip`, `stripLeading`, `stripTrailing` 및 `repeat`와 같은 새로운 메서드들이 추가됨
 
 ---
 
-### 🌟3. Collection.toArray()
+#### 3. Collection.toArray()
 
 Collection에 `toArray()`가 추가되어 List -> Array의 변환이 간편해졌다.
 
@@ -775,9 +875,9 @@ static void main(String[] args) {
 
 ---
 
-# Java 17
+## 4. Java 17
 
-## [🌟1. JEP 306 - Default 엄격한 부동 소수점](https://openjdk.org/jeps/306)
+### [1. JEP 306 - Default 엄격한 부동 소수점](https://openjdk.org/jeps/306)
 
 `JEP 306`이전에는 strictfp 키워드를 사용하면 엄격한 부동 소수점 계산을 따르게 했다.
 
@@ -785,7 +885,7 @@ static void main(String[] args) {
 
 ---
 
-## [2. JEP 356 - 개선된 의사 난수 생성기](https://openjdk.org/jeps/356)
+### [2. JEP 356 - 개선된 의사 난수 생성기](https://openjdk.org/jeps/356)
 
 - 다양한 PRNG 알고리즘 사용이 용이하도록 개선
   - 애플리케이션에서 다양한 의사 난수 생성 알고리즘을 교환해 사용할 수 있도록 새로운 인터페이스 타입과 구현을 제공한다.
@@ -830,7 +930,7 @@ public class Main {
 
 ---
 
-## [3. JEP 382 - macOS 렌더링 파이프라인 추가](https://openjdk.org/jeps/382)
+### [3. JEP 382 - macOS 렌더링 파이프라인 추가](https://openjdk.org/jeps/382)
 
 macOS용 새로운 렌더링 파이프라인이 추가됐다. OpenGL API가 macOS 10.14에서 Apple에 의해 폐기됐고, Apple은 Metal이라는 더 나은 성능의 새로운 렌더링 파이프라인을 사용하기로 했다.
 
@@ -838,13 +938,13 @@ macOS용 새로운 렌더링 파이프라인이 추가됐다. OpenGL API가 macO
 
 ---
 
-## [4. JEP 391 - macOS/AArch64 대응](https://openjdk.org/jeps/391)
+### [4. JEP 391 - macOS/AArch64 대응](https://openjdk.org/jeps/391)
 
 애플(Apple)이 Macintosh 컴퓨터들의 아키텍처를 `x64`에서 `AArch64`로 전환하는 장기적 계획을 발표함에 따라 JDK를 macOS/AArch64에 대응하는 것을 목적으로 한다.
 
 ---
 
-## [5. JEP 398 - Applet 공식 폐기](https://openjdk.org/jeps/398)
+### [5. JEP 398 - Applet 공식 폐기](https://openjdk.org/jeps/398)
 
 Applet API를 공식적으로 폐기한다.
 
@@ -854,7 +954,7 @@ Applet API를 공식적으로 폐기한다.
 
 ---
 
-## [6. JEP 403 - JDK 내부 API 캡슐화 강화](https://openjdk.org/jeps/403)
+### [6. JEP 403 - JDK 내부 API 캡슐화 강화](https://openjdk.org/jeps/403)
 
 - 캡슐화 강화
   - 거의 모든 JDK 내부 API 및 구현 세부 사항의 캡슐화를 강화하여, 개발자가 실수로나 악의적으로 JDK 내부로 접근하는 것을 방지한다.
@@ -864,7 +964,7 @@ Applet API를 공식적으로 폐기한다.
 
 ---
 
-## [7. JEP 406 - 개선된 Switch문 실험 버전 추가](https://openjdk.org/jeps/406)
+### [7. JEP 406 - 개선된 Switch문 실험 버전 추가](https://openjdk.org/jeps/406)
 
 case 라벨에 패턴을 허용하고 다양한 패턴, 각각에 대한 특정 동작과 함께 표현식을 테스트할 수 있게 한다.
 
@@ -913,13 +1013,13 @@ public class Main {
 
 ---
 
-## [8. JEP 407 - Remote Method Invocation(RMI) 활성화 메커니즘 제거](https://openjdk.org/jeps/407)
+### [8. JEP 407 - Remote Method Invocation(RMI) 활성화 메커니즘 제거](https://openjdk.org/jeps/407)
 
 RMI 활성화 기능은 시대에 뒤떨어지고 사용되지 않아 RMI 활성화하는 기능을 제거하고, 나머지 RMI 기능은 유지한다. 이로써 레거시 부분을 정리하여 Java 플랫폼을 최신 상태로 유지하도록 한다.
 
 ---
 
-## [🌟9. JEP 409 - Sealed Classes 추가](https://openjdk.org/jeps/409)
+### [9. JEP 409 - Sealed Classes 추가](https://openjdk.org/jeps/409)
 
 `sealed class`와 `sealed interface`는 다른 class나 interface가 이를 상속/구현 할 수 있는지를 제한한다.
 
@@ -931,7 +1031,7 @@ RMI 활성화 기능은 시대에 뒤떨어지고 사용되지 않아 RMI 활성
 
 - `non-sealed class`나 `non-sealed interface`는 어떤 클래스나 인터페이스로부터도 확장되거나 구현될 수 있다.
 
-### 설계 목적
+#### 설계 목적
 
 - Final 클래스
   - Final 클래스는 보안 상의 이유로 상속을 막거나, 불변성을 보장하고자 할 때 사용된다. 다른 클래스가 해당 클래스를 상속하거나 변경하지 못하도록 하여 의도한 동작을 보장한다.
@@ -939,21 +1039,21 @@ RMI 활성화 기능은 시대에 뒤떨어지고 사용되지 않아 RMI 활성
 - Sealed 클래스
   - Sealed 클래스는 클래스 계층 구조의 일부를 통제하고 특정 클래스나 인터페이스를 상속 또는 구현할 수 있는 클래스의 범위를 제한함으로써, 더 명확하고 제한된 클래스 계층을 구성할 수 있게된다.
 
-### UserCustomException.java (최상위 계층)
+#### UserCustomException.java (최상위 계층)
 
 ```java
 // UserCustomException 클래스는 UserBadRequestException과 UserForbiddenException에 의해서만 상속될 수 있다.
 public sealed class UserCustomException permits UserBadRequestException, UserForbiddenException {}
 ```
 
-### UserBadRequestException.java (두 번째 계층)
+#### UserBadRequestException.java (두 번째 계층)
 
 ```java
 // UserBadRequestException은 상속될 수 없는 final 클래스이다.
 public final class UserBadRequestException extends UserCustomException {}
 ```
 
-### UserForbiddenException.java (두 번째 계층)
+#### UserForbiddenException.java (두 번째 계층)
 
 ```java
 // UserForbiddenException은 UserAuthortionException, UserNotFoundException에 의해서만 다시 상속될 수 있는 sealed 클래스이다.
@@ -964,14 +1064,14 @@ public sealed class UserForbiddenException
 }
 ```
 
-### UserAuthorizationException.java (세 번째 계층)
+#### UserAuthorizationException.java (세 번째 계층)
 
 ```java
 // UserAuthorizationException은 상속될 수 없는 final 클래스이다.
 public final class UserAuthorizationException extends UserForbiddenException {}
 ```
 
-### UserNotFoundException.java (세 번째 계층)
+#### UserNotFoundException.java (세 번째 계층)
 
 ```java
 // UserNotFoundException은 상속될 수 없는 final 클래스이다.
@@ -980,7 +1080,7 @@ public final class UserNotFoundException extends UserForbiddenException {}
 
 ---
 
-## [🌟10. JEP 410 - 실험판 AOT, JIT Compiler 제거 (실험버전이 제거된거고 기존 컴파일러들은 남아있는거겠지?)](https://openjdk.org/jeps/410)
+#### 10. JEP 410 - 실험판 AOT, JIT 컴파일러 제거
 
 Java 기반 사전시간(AOT) 및 실행시간(JIT) 컴파일러를 사용률이 낮고, 유지 보수 비용이 커 JDK 17에서 제거한다.
 
@@ -988,13 +1088,13 @@ JIT 컴파일을 위해 외부에서 빌드한 컴파일러 버전을 계속 사
 
 ---
 
-## [11. JEP 411 - Security Manager 사용 중지 및 제거 예정](https://openjdk.org/jeps/411)
+### [11. JEP 411 - Security Manager 사용 중지 및 제거 예정](https://openjdk.org/jeps/411)
 
 Java 언어 자체의 Security Manager가 사용되지 않아 제거 예정된다.
 
 ---
 
-## [12. JEP 412 - Foreign Function & Memory API (Incubator)](https://openjdk.org/jeps/412)
+### [12. JEP 412 - Foreign Function & Memory API (Incubator)](https://openjdk.org/jeps/412)
 
 Java Application이 Java Runtime 외부의 코드, 데이터와 상호작용할 수 있는 API를 도입한다.
 
@@ -1015,12 +1115,166 @@ Java Application이 Java Runtime 외부의 코드, 데이터와 상호작용할 
 
 ---
 
-## [13. JEP 414 - Vector API (Second Incubator)](https://openjdk.org/jeps/414)
+### [13. JEP 414 - Vector API (Second Incubator)](https://openjdk.org/jeps/414)
 
 JEP 338에 이어 JDK 16에서 처음으로 인큐베이팅 API로 도입된 벡터 API를 개선한다.
 
 ---
 
-## [14. JEP 415 - 컨텍스트별 역직렬화 필터 추가](https://openjdk.org/jeps/415)
+### [14. JEP 415 - 컨텍스트별 역직렬화 필터 추가](https://openjdk.org/jeps/415)
 
 컨텍스트별 및 동적으로 선택된 역직렬화 필터를 구성할 수 있는 방법을 제공한다. JVM 전역 필터 팩토리를 통해 실행될 때마다 각 역직렬화 작업에 대해 필터를 선택하는 방식으로 동작한다.
+
+
+---
+
+## 5. Java 21
+
+여기부터는 실무에 영향이 큰 것들 위주로 골랐다.
+
+### [1. JEP 444 - Virtual Threads](https://openjdk.org/jeps/444)
+
+자바 21에서 가장 큰 변화다.
+
+**기존 스레드는 운영체제 스레드와 1대 1로 묶여 있다.** 그래서 개수를 마음대로 늘릴 수 없다. 스레드 하나에 스택으로 메가바이트 단위 메모리가 들어가고, 문맥 교환 비용도 커널이 부담한다.
+
+요청 하나에 스레드 하나를 붙이는 방식이 여기서 막힌다. 톰캣이 스레드 풀을 200개 정도로 두는 이유가 이것이다.
+
+**그런데 그 스레드들은 대부분 기다리고 있다.** DB 응답을 기다리거나, 다른 서비스의 응답을 기다린다. 일을 안 하면서 자리만 차지한다.
+
+이 문제를 피하려고 나온 것이 논블로킹 방식이었다. WebFlux가 그 예다. **처리량은 올라가지만 코드가 어려워진다.** 콜백이나 리액티브 연산자로 짜야 하고, 디버깅할 때 스택 트레이스가 흐름을 안 보여준다.
+
+**가상 스레드는 세 번째 길이다.**
+
+```mermaid
+flowchart TB
+    subgraph P["플랫폼 스레드 (OS 스레드와 1:1)"]
+        C1["캐리어 스레드 1"]
+        C2["캐리어 스레드 2"]
+    end
+    subgraph V["가상 스레드 (JVM이 관리, 수백만 개 가능)"]
+        V1["가상 스레드 1"]
+        V2["가상 스레드 2"]
+        V3["가상 스레드 3"]
+        VN["..."]
+    end
+    V1 --> C1
+    V2 --> C1
+    V3 --> C2
+    VN --> C2
+```
+
+가상 스레드가 블로킹 작업을 만나면 **JVM이 그것을 캐리어 스레드에서 떼어내고 다른 가상 스레드를 올린다.** 운영체제 스레드는 놀지 않는다.
+
+```java
+try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+    IntStream.range(0, 10_000).forEach(i ->
+        executor.submit(() -> {
+            Thread.sleep(Duration.ofSeconds(1));   // 블로킹처럼 보이지만 캐리어를 놓아준다
+            return i;
+        })
+    );
+}
+```
+
+**코드는 평소대로 쓰면서 처리량을 얻는 것**이 이 기능의 핵심이다.
+
+주의할 점이 있다. **`synchronized` 블록 안에서 블로킹하면 캐리어 스레드가 붙잡힌다.** 이걸 pinning이라고 부른다. 가상 스레드를 쓸 거면 `synchronized`를 `ReentrantLock`으로 바꾸는 것이 권해진다. (이 제약은 이후 버전에서 상당 부분 해소됐지만, 21 기준으로는 신경 써야 한다.)
+
+**스레드 풀도 의미가 없어진다.** 가상 스레드는 만드는 비용이 싸므로 재사용할 이유가 없다. 작업마다 새로 만드는 것이 맞다.
+
+그리고 **`ThreadLocal`을 조심해야 한다.** 스레드가 수백만 개면 `ThreadLocal`에 담긴 것도 그만큼 늘어난다. 이 자리를 대신하라고 나온 것이 JEP 446의 Scoped Values다.
+
+### [2. JEP 439 - Generational ZGC](https://openjdk.org/jeps/439)
+
+ZGC에 세대 개념이 들어갔다.
+
+기존 ZGC는 정지 시간이 매우 짧은 대신 **모든 객체를 똑같이 취급했다.** 대부분의 객체가 금방 죽는다는 성질을 못 살렸다.
+
+세대를 나누면 **젊은 객체만 자주 훑으면 되므로** 같은 정지 시간에 더 적은 자원을 쓴다.
+
+`-XX:+UseZGC -XX:+ZGenerational`로 켠다. GC 이야기는 [따로 정리한 글](/posts/JVM-GC/)에 있다.
+
+### [3. JEP 431 - Sequenced Collections](https://openjdk.org/jeps/431)
+
+**순서가 있는 컬렉션에 공통 인터페이스가 생겼다.**
+
+전에는 첫 요소를 얻는 방법이 컬렉션마다 달랐다.
+
+| 타입 | 첫 요소 | 마지막 요소 |
+|---|---|---|
+| `List` | `list.get(0)` | `list.get(list.size() - 1)` |
+| `Deque` | `deque.getFirst()` | `deque.getLast()` |
+| `SortedSet` | `set.first()` | `set.last()` |
+| `LinkedHashSet` | 반복자를 돌려야 함 | 전부 돌아야 함 |
+
+이제 전부 같은 메서드로 된다.
+
+```java
+interface SequencedCollection<E> extends Collection<E> {
+    SequencedCollection<E> reversed();
+    void addFirst(E e);
+    void addLast(E e);
+    E getFirst();
+    E getLast();
+    E removeFirst();
+    E removeLast();
+}
+```
+
+`reversed()`가 특히 유용하다. **복사본이 아니라 뷰라서** 원본이 바뀌면 함께 바뀌고, 만드는 비용도 없다.
+
+### [4. JEP 440, 441 - 레코드 패턴과 switch 패턴 매칭](https://openjdk.org/jeps/441)
+
+자바 17에서 미리 보기였던 것들이 정식이 됐다.
+
+```java
+sealed interface Shape permits Circle, Rectangle {}
+record Circle(double radius) implements Shape {}
+record Rectangle(double width, double height) implements Shape {}
+
+double area(Shape shape) {
+    return switch (shape) {
+        case Circle(double r) -> Math.PI * r * r;
+        case Rectangle(double w, double h) -> w * h;
+    };
+}
+```
+
+**`case Circle(double r)`이 레코드 패턴이다.** 타입을 확인하면서 동시에 필드를 꺼낸다. 형변환과 게터 호출이 사라진다.
+
+`default`가 없어도 되는 이유는 `Shape`가 `sealed`라서 컴파일러가 하위 타입 전부를 알기 때문이다. **나중에 `Triangle`을 추가하면 이 `switch`에서 컴파일 에러가 난다.** 처리를 빠뜨린 자리를 컴파일러가 찾아준다.
+
+### [5. JEP 453 - Structured Concurrency (미리 보기)](https://openjdk.org/jeps/453)
+
+여러 작업을 병렬로 돌릴 때 **그것들을 하나의 단위로 다루게 해준다.**
+
+```java
+try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
+    Supplier<User> user = scope.fork(() -> findUser(id));
+    Supplier<Order> order = scope.fork(() -> findOrder(id));
+
+    scope.join();
+    scope.throwIfFailed();
+
+    return new Response(user.get(), order.get());
+}
+```
+
+**하나가 실패하면 나머지가 자동으로 취소된다.** `ExecutorService`로 하면 실패한 것 외의 작업을 직접 취소해야 하고, 빠뜨리기 쉽다.
+
+`try-with-resources`로 감싸는 것도 의도적이다. **블록을 벗어날 때 모든 하위 작업이 끝났음이 보장된다.** 스레드가 블록 밖으로 새지 않는다.
+
+---
+
+## 정리하며
+
+처음 던진 질문들에 대한 답이다.
+
+**LTS가 보장하는 것.** 수년간의 보안 패치다. 기능 추가가 아니다. 새 기능은 최신 버전에만 들어가므로, LTS를 쓴다는 것은 안정성을 얻고 새 기능을 포기하는 선택이다. 비LTS를 운영에 쓰면 6개월마다 올려야 하고, 안 올리면 패치를 못 받는다.
+
+**버전을 올릴 때 실제로 깨지는 것.** 8에서 11로 갈 때는 제거된 모듈이 문제가 된다. JAXB, JAX-WS, CORBA 같은 것들이 JDK에서 빠졌으므로 의존성으로 따로 넣어야 한다. 11에서 17로 갈 때는 JDK 내부 API 접근이 막히는 것(JEP 403)이 가장 크다. 리플렉션으로 내부를 찔러보는 라이브러리가 있으면 거기서 터진다.
+
+**실무에 바로 영향을 주는 변경.** 8에서는 람다와 스트림, 11에서는 표준 HTTP 클라이언트와 기본 GC가 G1으로 바뀐 것, 17에서는 sealed 클래스와 내부 API 캡슐화, 21에서는 가상 스레드다.
+
+JEP를 직접 읽어보고 남은 감각은 **대부분의 변경에 "그래서 무엇이 불편했는지"가 먼저 적혀 있다**는 것이었다. 요약글은 "무엇이 생겼다"만 말해주는데, 원문에는 그 기능이 없던 시절에 사람들이 어떤 우회를 하고 있었는지가 나온다. JEP 181의 다리 메서드처럼, 그 우회를 알고 나면 기능의 모양이 왜 그런지도 설명이 됐다.
